crates/analyzer/tests/snapshots/errors__call_balance_of_with_2_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `balance_of` expects 1 argument, but 2 were provided
   ┌─ src/evm.fe:38:15
   │
38 │ pub unsafe fn balance_of(addr: address) -> u256:
   │               ^^^^^^^^^^ expects 1 argument
   │
   ┌─ [snippet]:4:26
   │
 4 │     std::evm::balance_of(address(0), 2)
   │                          ----------  - supplied 2 arguments


